Fix word wrapping for long 2 letter lists
Fix an issue where a two letter list row could wrap awkwardly when
it's got several items

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,6 +52,7 @@ tr:last-child {
 
 .two-letter-list-row {
     text-transform: uppercase;
+    white-space: nowrap;
 }
 
 .two-letter-list-item {
